--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/ruslanmsk/frontend-project-lvl2.git"
   },
-  "author": "",
+  "author": "Ruslan Kucherov",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ruslanmsk/frontend-project-lvl2/issues"
@@ -22,5 +22,10 @@
   "homepage": "https://github.com/ruslanmsk/frontend-project-lvl2#readme",
   "dependencies": {
     "commander": "^6.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.15.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
