--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "jest",
-    "test-coverage": "nyc npm run test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -32,7 +31,6 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
-    "jest": "^26.6.3",
-    "nyc": "^15.1.0"
+    "jest": "^26.6.3"
   }
 }
