--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/ruslanmsk/frontend-project-lvl2#readme",
   "dependencies": {
     "commander": "^6.2.0",
-    "js-yaml": "^4.0.0"
+    "js-yaml": "^4.0.0",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
